--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <script src="https://accounts.google.com/gsi/client" async></script>
-    <div id="root">fdjdfj</div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/assets/logo.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Admin Fira</title>
+        <style>
+            .loader-root-container {
+                display: flex;
+                width: 100vw;
+                height: 100vh;
+                justify-content: center;
+                align-items: center;
+            }
+            .loader-root {
+                border: 16px solid #f3f3f3;
+                border-top: 16px solid black;
+                border-radius: 50%;
+                width: 80px;
+                height: 80px;
+                animation: spinroot 2s linear infinite;
+            }
+        </style>
+    </head>
+    <body>
+        <script src="https://accounts.google.com/gsi/client" async></script>
+        <div id="root">
+            <div class="loader-root-container">
+                <div class="loader-root"></div>
+            </div>
+        </div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
